<resources>
    <string name="app_name">Password Generator</string>
    <string name="title">Password Generator</string>
    <string name="length_label">Length: %1$d</string>
    <string name="use_uppercase">Use uppercase letters</string>
    <string name="use_numbers">Use numbers</string>
    <string name="use_special_chars">Use special characters</string>
    <string name="generate_password">Generate Password</string>
    <string name="password_copied">Password copied to clipboard</string>
</resources>