<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mikelcalvo.passwordgenerator.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/textColorLight"
            android:textSize="42sp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="24sp"
            app:autoSizeMaxTextSize="54sp"
            app:autoSizeStepGranularity="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="-16dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardContentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <SeekBar
                    android:id="@+id/lengthSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:max="32"
                    android:progress="12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lengthLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length_label"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lengthSeekBar" />

                <CheckBox
                    android:id="@+id/useUppercaseCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_uppercase"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lengthLabelTextView" />

                <CheckBox
                    android:id="@+id/useNumbersCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_numbers"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/useUppercaseCheckBox" />

                <CheckBox
                    android:id="@+id/useSpecialCharsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_special_chars"
                    android:textColor="@color/textColorLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/useNumbersCheckBox" />

                <Button
                    android:id="@+id/generateButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/generate_password"
                    android:textColor="@color/colorSecondaryLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/useSpecialCharsCheckBox"
                    app:strokeColor="@color/colorSecondaryLight" />

                <ImageButton
                    android:id="@+id/copyButton"
                    style="@style/MyOutlinedImageButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:padding="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_copy"
                    app:layout_constraintBottom_toBottomOf="@+id/generateButton"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@+id/generateButton"
                    app:layout_constraintTop_toTopOf="@+id/generateButton"
                    app:tint="@color/colorSecondaryLight" />

                <TextView
                    android:id="@+id/passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:text=""
                    android:breakStrategy="simple"
                    android:textColor="@color/textColorLight"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/generateButton"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>